# gygaxagain

./: .env.example  .erb_lint.yml  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Gemfile  Procfile.dev  README.md  SPEC.md  package.json  pytest.ini
.claude/: settings.json
.claude/agents/: bookkeeper.md  dice.md  librarian.md  mythic.md  revelation.md  world-state.md
.claude/commands/: ask-oracle.md  intake.md  roll.md  session-end.md  session-start.md
app/controllers/: application_controller.rb  pages_controller.rb
app/javascript/: application.js
app/jobs/: narration_job.rb  scene_audit_job.rb
app/models/: campaign.rb  event.rb  faction.rb  faction_secret.rb  (+8 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
db/: schema.rb  seeds.rb
docs/: character-import-design.md  known-limitations.md  resume-on-new-machine.md
meta/: campaign-config.md  chaos-factor.md  dice-config.md
references/: test-bestiary.md
scripts/: build_css.mjs
spec/: rails_helper.rb
tools/dice/: pyproject.toml
tools/dice/src/dice/: __init__.py  __main__.py  cli.py  parser.py
tools/dice/tests/: test_cli.py  test_parser.py  test_smoke.py
tools/dm-fs-mcp/: pyproject.toml
tools/dm-fs-mcp/src/dm_fs/: __init__.py  audit.py  ops.py  safety.py  server.py
tools/dm-fs-mcp/tests/: test_audit.py  test_ops.py  test_safety.py  test_server.py
tools/mythic/: pyproject.toml
tools/mythic/src/mythic/: __init__.py  chaos.py  cli.py  events.py  fate_chart.py
tools/mythic/tests/: test_chaos.py  test_cli.py  test_events.py  test_fate_chart.py  test_smoke.py
(+423 files in other folders)
