[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dice"
version = "0.1.0"
description = "Dice expression parser and CSPRNG roller for the solo campaign engine"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dice = "dice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
