[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-fs-mcp"
version = "0.1.0"
description = "MCP server exposing dm/ as path-scoped read-only file access"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
dm-fs-mcp = "dm_fs.server:main"

[tool.setuptools.packages.find]
where = ["src"]
