[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mythic"
version = "0.1.0"
description = "Mythic GME 2e procedures for the solo campaign engine"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mythic = "mythic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
